# Vowe-Format-Detection

./: README.md
New Unity Project/: Assembly-CSharp-Editor.csproj  Assembly-CSharp.csproj
New Unity Project/Assets/: demos.unity
VisemeReco/: BUILD  compute_mfcc.cc  compute_spec.cc  full_mlp.cc  full_simple.cc  run.sh  simple.cc
VisemeReco/calculators/: BUILD  mlp_inference_calculator.cc  svm_classifier_calculator.cc  svm_classifier_calculator.proto
VisemeReco/graphs/: full_mlp.pbtxt  full_simple.pbtxt  mel_mfcc.pbtxt  simple.pbtxt  specturm.pbtxt  viseme.pbtxt
VisemeReco/includes/: svm.h
VisemeReco/resources/XAvatar/: XAvatar.moc3  XAvatar.model3.json  XAvatar.physics3.json
VisemeReco/resources/fox/: base.iqm  morph0.iqm  morph1.iqm  morph10.iqm  morph2.iqm  morph3.iqm  morph4.iqm  morph5.iqm  morph6.iqm  morph7.iqm  morph8.iqm  morph9.iqm
VisemeReco/training/: BUILD  mfcc5.proto  training_data.cc
dataset_small/: use_python.py
dataset_small/PixelShift/: explore_data.py
dataset_small/PythonTraining/: 14class.py  16_8DNN_R  cnn_python.py  dnn_python.py  svm_python.py  tensorboard_cmd.txt
dataset_small/cpp_interface/: explore_thedata.hpp  use_Cpp.cpp
lipsync/Project1/: Project1.sln
tradiational_sound/: PLP_RRBF1  bars  data_pretreat.py  hist.py  lcp_datapre.py  lcp_only.py  lcp_svm.py  lcp_t  librosa_trying.py  lpc_extraction.py  mfcc_d  mfcc_t  plp_extractions.py  plp_t  rplp_t  svm_mfcc.py  svm_plp.py
train_svm_models/: CMakeLists.txt  example.cpp  test.cpp  train.cpp
train_svm_models/mfcc_string_data/: mfcc_a  mfcc_e  mfcc_i  mfcc_o  mfcc_u
(+3261 files in other folders)
